# semantic-caching

./: README.md  app.py  main.py  pyproject.toml
notebooks/: evals.py  fuzzy.ipynb  test.ipynb
