[project]
name = "semantic-cache"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.7",
    "langchain-groq>=1.1.2",
    "notebook>=7.5.6",
    "redis==6.4.0",
    "redisvl==0.8.2",
    "sentence-transformers==5.0.0",
    "streamlit>=1.58.0",
    "plotly>=5.0.0",
    "python-dotenv>=1.1.1",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "fuzzywuzzy>=0.18.0",
]
